--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@svgdotjs/svg.js": "^3.1.1",
+    "pts": "^0.10.6",
     "sirv-cli": "^1.0.0"
   }
 }
