--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@svgdotjs/svg.js": "^3.1.1",
     "pts": "^0.10.6",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-watch-resize": "^1.0.3"
   }
 }
