--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "build-db": "node ./src/logic/cardata/script_loaddb.js"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
