--- a/src/logic/cardata/data/cars/hyundai_i20.yaml
+++ b/src/logic/cardata/data/cars/hyundai_i20.yaml
@@ -2,6 +2,7 @@ name : hyundai i20 1.2 (84)
 weight : 1050
 engine : hyundai_petrol_1.2_84
 gearRatio : [3.727, 2.056, 1.269, 0.906, 0.719]
+driveRatio : 4.6
 gearSpeed : 35.4
 dragCoef : 0.3
 dragArea : 2.12
