--- a/src/logic/cardata/data/cars/renault_zoe.yaml
+++ b/src/logic/cardata/data/cars/renault_zoe.yaml
@@ -1,12 +1,15 @@
 name: zoe
+trim: Q90
+year: 2017
 engine:
   torqueY: [190, 220, 220, 150, 105, 80, 65 , 52 , 30 ]
   torqueX: [0  , 7  , 33 , 50 , 70 , 90, 110, 135, 200]
-  torqueXMultiplier: 83
+  torqueXMultiplier: 80
 
 gearRatio: [1]
-gearSpeed: 12.05
-weight : 1468
+driveRatio: 9.3
+gearSpeed: 12.6
+weight : 1480
 length : 4084
 width : 1730
 height : 1562
