--- a/src/logic/cardata/data/cars/renault_trafic2.yaml
+++ b/src/logic/cardata/data/cars/renault_trafic2.yaml
@@ -20,12 +20,20 @@ wheelDiameter : 67
 # -------------
 # DIMENSIONS
 # -------------
-weight : 1848
+weight : 1710
 width : 1904
 height : 1962
 length : 4782
 dragArea : 3.5
-dragCoef : 0.4
+dragCoef : 0.36
+
+trunk : 3200
+
+# -------------
+# STATS
+# -------------
+acc0100: 19
+
 
 # -------------
 # TRIMS
@@ -36,3 +44,5 @@ trims :
     height : 2460
     dragArea : 4.67
     weight : 1810
+
+    trunk : 8360
