--- a/src/logic/cardata/data/cars/renault_zoe.yaml
+++ b/src/logic/cardata/data/cars/renault_zoe.yaml
@@ -7,8 +7,8 @@ style: hatchback
 # ENGINE
 # -------------
 engine:
-  torqueY: [190, 220, 220, 162, 115, 90, 73 , 60 , 40 ]
-  torqueX: [0  , 7  , 33 , 50 , 70 , 90, 110, 135, 200]
+  torqueY: [190, 220, 220, 215, 194, 172.4, 155, 129.3, 115, 90, 73 , 60 , 40 ]
+  torqueX: [0  , 7  , 32 , 35 , 40 , 45   , 50 , 60   , 70 , 90, 110, 135, 200]
   torqueXMultiplier: 80
   minRPM: 50
 
@@ -26,8 +26,8 @@ weight : 1480
 length : 4084
 width : 1730
 height : 1562
-dragCoef : 0.29
-dragArea : 2.1
+dragCoef : 0.33
+dragArea : 2.24
 
 wheelBase: 2588
 trunk: 338
