--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pts": "^0.10.6",
     "sirv-cli": "^1.0.0",
     "svelte-watch-resize": "^1.0.3",
+    "three": "^0.140.0",
     "uplot": "^1.6.19"
   }
 }
