--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@svgdotjs/svg.js": "^3.1.1",
+    "camera-controls": "^1.34.4",
     "pts": "^0.10.6",
     "sirv-cli": "^1.0.0",
     "svelte-watch-resize": "^1.0.3",
