Load different 3d models depending on specs

--- a/src/logic/cardata/data/cars/peugeot_206.yaml
+++ b/src/logic/cardata/data/cars/peugeot_206.yaml
@@ -39,3 +39,10 @@ fuelTank: 50
 turningCircle : 10.8
 acc0100: 15.5
 vmax: 155
+
+
+# -------------
+# 3D
+# -------------
+model: peugeot206
+modelWheel: wheel206
