--- a/src/logic/cardata/data/cars/renault_zoe.yaml
+++ b/src/logic/cardata/data/cars/renault_zoe.yaml
@@ -53,3 +53,8 @@ trims:
       torqueX: [0  , 250, 2500, 3250, 4000, 5500, 7000 , 9000, 11300]
       torqueXMultiplier: 1
       hp : 75
+
+# -------------
+# 3D
+# -------------
+model: zoe2
