--- a/src/logic/cardata/data/cars/citroen_2cv.yaml
+++ b/src/logic/cardata/data/cars/citroen_2cv.yaml
@@ -50,6 +50,7 @@ trims :
     engine :
       torqueY : [13.3,26.2,34.9,39.5,40.1,40.1,39  ,36.6,32.9,26.6]
       torqueX : [1000,1500,2000,2500,2700,3000,3500,4000,4500,5000]
+      hp : 23
     gearRatio : [7.411,3.573,2.133,1.474]
     driveRatio : 3.625
     gearSpeed : 21.3
@@ -59,5 +60,5 @@ trims :
 # -------------
 # 3D
 # -------------
-model: 2cv
+model: citroen2cv
 modelWheel: wheel2cv
