--- a/src/logic/cardata/data/cars/renault_zoe.yaml
+++ b/src/logic/cardata/data/cars/renault_zoe.yaml
@@ -11,6 +11,7 @@ engine:
   torqueX: [0  , 7  , 32 , 35 , 40 , 45   , 50 , 60   , 70 , 90, 110, 135, 200]
   torqueXMultiplier: 80
   minRPM: 50
+  hp : 90
 
 # -------------
 # TRANSMISSION
@@ -57,4 +58,4 @@ trims:
 # -------------
 # 3D
 # -------------
-model: zoe
+model: renaultZoe
