--- a/src/logic/cardata/data/cars/peugeot_206.yaml
+++ b/src/logic/cardata/data/cars/peugeot_206.yaml
@@ -8,6 +8,7 @@ trim : 1.1 (60)
 engine :
   torqueY: [25.8,52.1,71.6,90.5,89.2,86.3,82.1,76.4,63  ]
   torqueX: [1000,1500,2000,3000,4000,4500,5000,5500,6000]
+  minRPM : 1500
   hp: 59
 
 # -------------
