Add nissan data

--- a/src/logic/cardata/data/cars/citroen_ln.yaml
+++ b/src/logic/cardata/data/cars/citroen_ln.yaml
@@ -10,7 +10,8 @@ engine :
   torqueX: [1000,1500,2000,2500,3000,3500,4000,4500,5000,5500,6000]
   hp: 32
   displacement : 602
-  type : boxer2
+  layout : boxer2
+  
 # -------------
 # TRANSMISSION
 # -------------
