--- a/src/logic/cardata/data/cars/citroen_2cv.yaml
+++ b/src/logic/cardata/data/cars/citroen_2cv.yaml
@@ -9,7 +9,7 @@ engine :
   name :
   torqueY : [9.6 ,17.1,19.6,19.6,19.4,18.9,18  ,14.2]
   torqueX : [1000,1500,2000,2200,2500,3000,3500,4000]
-  type : boxer 2
+  layout : boxer 2
   hp : 9
 
 # -------------
