--- a/src/logic/cardata/data/cars/dacia_logan.yaml
+++ b/src/logic/cardata/data/cars/dacia_logan.yaml
@@ -11,7 +11,7 @@ engine :
   hp: 67
   torqueY: [95.2, 154.7, 160 , 159.3, 155.1, 147, 135.1, 119.4, 99.3] # 160nm @1700 67hp @4000
   torqueX: [1000, 1500 , 1700, 2000 , 2500 , 3000, 3500, 4000 , 4500]
-  type : l4
+  layout : l4
   displacement : 1461
 
 # -------------
