--- a/src/logic/cardata/data/cars/renault_clio2.yaml
+++ b/src/logic/cardata/data/cars/renault_clio2.yaml
@@ -9,8 +9,9 @@ year : 1998
 engine :  
   name :  
   hp: 90
-  torqueY: [49.4, 127.3, 128.9, 131.0, 124.1, 131.0, 130.0, 128.0, 109.4]
-  torqueX: [1000, 1500 ,2000  ,2500  ,3000  ,4000  ,4500  , 5000 , 5500 ]
+  # 131nm @2500 90hp @5250
+  torqueY: [49.4, 127.3, 128.9, 131.0, 124.1, 131.0, 130.0, 128.0, 122 , 109.4]
+  torqueX: [1000, 1500 ,2000  ,2500  ,3000  ,4000  ,4500  , 5000 , 5250, 5500 ]
   minRPM: 1500
   type : petrol 
   layout : l4
@@ -45,7 +46,7 @@ trunkMax:
 acc0100: 12.9
 vmax: 175
 turningCircle : 10.3
-fuelTank : 50
+energyTank : 50
 autonomy : 
 wheelType : 165/65 R 14 T
 
