--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
+    "chokidar": "^3.5.3",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
+    "svelte": "^3.58.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "toml": "^3.0.0",
