--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "svelte-app",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "build-db": "node ./src/logic/cardata/script_loaddb.js"
+    "build-db": "node ./src/logic/cardata/script_loaddb.js",
+    "vite-dev": "vite",
+    "vite-build": "vite build"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
@@ -15,6 +18,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
+    "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "@tsconfig/svelte": "^2.0.0",
     "chokidar": "^3.5.3",
     "rollup": "^2.3.4",
@@ -29,6 +33,8 @@
     "toml": "^3.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0",
+    "vite": "^4.2.1",
+    "vite-plugin-static-copy": "^0.13.1",
     "yaml": "^2.0.1"
   },
   "dependencies": {
