--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "tslib": "^2.0.0",
     "typescript": "^4.0.0",
     "vite": "^4.2.1",
+    "vite-plugin-run": "^0.4.0",
     "vite-plugin-static-copy": "^0.13.1",
+    "vite-plugin-watch-and-run": "^1.1.2",
     "yaml": "^2.0.1"
   },
   "dependencies": {
