--- a/package.json
+++ b/package.json
@@ -4,48 +4,30 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "build": "vite build",
+    "dev": "vite",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "build-db": "node ./src/logic/cardata/script_loaddb.js",
-    "vite-dev": "vite",
-    "vite-build": "vite build"
+    "build-db": "node ./src/logic/cardata/script_loaddb.js"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
-    "@tsconfig/svelte": "^2.0.0",
-    "chokidar": "^3.5.3",
-    "rollup": "^2.3.4",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
+    "@tsconfig/svelte": "^4.0.1",
     "svelte": "^3.58.0",
-    "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "toml": "^3.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0",
+    "svelte-check": "^2.10.3",
+    "svelte-preprocess": "^4.10.7",
+    "typescript": "^5.0.0-beta",
     "vite": "^4.2.1",
-    "vite-plugin-run": "^0.4.0",
     "vite-plugin-static-copy": "^0.13.1",
     "vite-plugin-watch-and-run": "^1.1.2",
-    "yaml": "^2.0.1"
+    "yaml": "^2.2.1"
   },
   "dependencies": {
-    "@svgdotjs/svg.js": "^3.1.1",
-    "camera-controls": "^1.34.4",
-    "pts": "^0.10.6",
-    "sirv-cli": "^1.0.0",
+    "@svgdotjs/svg.js": "^3.1.2",
+    "camera-controls": "^1.38.2",
+    "pts": "^0.10.12",
+    "sirv-cli": "^1.0.14",
     "svelte-watch-resize": "^1.0.3",
-    "three": "^0.140.0",
-    "uplot": "^1.6.19"
+    "three": "^0.140.2",
+    "uplot": "^1.6.24"
   }
 }
