--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "vite build",
     "dev": "vite",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "build-db": "node ./src/logic/cardata/script_loaddb.js"
+    "build-db": "node ./src/logic/cardata/script_loaddb.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "@tsconfig/svelte": "^4.0.1",
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
     "svelte": "^3.58.0",
     "svelte-check": "^2.10.3",
     "svelte-preprocess": "^4.10.7",
@@ -29,5 +32,10 @@
     "svelte-watch-resize": "^1.0.3",
     "three": "^0.140.2",
     "uplot": "^1.6.24"
+  },
+  "jest" : {
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   }
 }
