Add citroen ami 3d model

--- a/data/cars/citroen_ami.yaml
+++ b/data/cars/citroen_ami.yaml
@@ -52,8 +52,8 @@ wheelType : 155/65R14
 # -------------
 # 3D
 # -------------
-model: 
-modelWheel:
+model: citroenAmi
+modelWheel: wheelAmi
 
 # -------------
 # TRIMS
