--- a/data/cars/landrover_defender.yaml
+++ b/data/cars/landrover_defender.yaml
@@ -8,8 +8,8 @@ year : 1984
 # -------------
 engine :  
   name :  2.25D
-  hp:
-  torqueY: [89.4, 112.4, 140 , 134.1, 122.0, 109.8, 100.3, 89.4, 78.6] # 140Nm @1800 62hp @4000
+  hp: 62
+  torqueY: [89.4, 112.4, 140 , 138  , 132  , 124  , 117, 110, 78.6] # 140Nm @1800 62hp @4000
   torqueX: [1000, 1500 , 1800, 2000 , 2500 , 3000 , 3500 , 4000, 4500]
   type : diesel
   layout : l4 # boxer2, l4, v6
@@ -42,7 +42,7 @@ trunkMax: 850
 # STATS
 # -------------
 acc0100: 25
-vmax: 113
+vmax: 113 # 100 https://www.lrukforums.com/threads/2-25d-max-speed.249575/
 avgConsumption : 
 energyTank : 60
 autonomy : 
@@ -59,5 +59,28 @@ modelWheel:
 # TRIMS
 # -------------
 trims : 
-  - trim :
+  - trim : 2.25P 74hp
+    engine :   
+      name :  2.25P
+      hp: 74
+      torqueY: [90  , 150 , 162  , 129 , 100] # 162nm@2000 74hp@4000
+      torqueX: [1000, 1500, 2000 , 4000, 4500]
+      type : petrol
+      layout : l4 
+      displacement : 2286
+    gearRatio : [3.32,1.91,1.30,1]
+    gearSpeed : 38.9
+
+  - trim : 2.5P 83hp
+    engine :   
+      name :  2.5P
+      hp: 83
+      torqueY: [95, 160  , 180 , 145 , 110] # 180Nm@2000 83hp@4000
+      torqueX: [1000, 1500, 2000, 4000, 4500]
+      type : petrol
+      layout : l4
+      displacement : 2495
+    vmax: 120
+    gearRatio : [3.32,1.91,1.30,1]
+    gearSpeed : 38.9
 
