--- a/data/cars/toyota_hilux.yaml
+++ b/data/cars/toyota_hilux.yaml
@@ -67,5 +67,6 @@ trims :
       torqueX: [1000, 1300, 1500, 1600, 2000, 2400 , 3000 , 3600, 4000, 4200] # 70 @ 5000
     acc0100 : 17.5 # https://www.youtube.com/watch?v=CtO58GOqxqQ 15
     vmax : 150
+    modelMisc: 'hardtop'
 
 
