--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "@tsconfig/svelte": "^4.0.1",
     "@types/jest": "^29.5.0",
+    "@types/three": "^0.150.1",
     "jest": "^29.5.0",
     "svelte": "^3.58.0",
     "svelte-check": "^2.10.3",
@@ -33,7 +34,7 @@
     "three": "^0.140.2",
     "uplot": "^1.6.24"
   },
-  "jest" : {
+  "jest": {
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
     }
