--- a/data/cars/landrover_defender.yaml
+++ b/data/cars/landrover_defender.yaml
@@ -4,7 +4,7 @@ trim : defender90
 year : 1984
 
 # -------------
-# ENGINE
+# ENGINES
 # -------------
 engine :  
   name : NA2.5D 67hp
@@ -14,6 +14,28 @@ engine :
   type : diesel
   layout : l4 # boxer2, l4, v6
   displacement : 2495
+
+engines :
+  - engine :   
+      name : 2.3P 74hp
+      hp: 74
+      torqueY: [80  , 150 , 162  , 129 , 100] # 162nm@2000 74hp@4000
+      torqueX: [1000, 1500, 2000 , 4000, 4500]
+      type : petrol
+      layout : l4 
+      displacement : 2286
+    year : 1983
+    
+  - engine :   
+      name :  2.5P
+      hp: 83
+      torqueY: [85, 160  , 180 , 145 , 110] # 180Nm@2000 83hp@4000
+      torqueX: [1000, 1500, 2000, 4000, 4500]
+      type : petrol
+      layout : l4
+      displacement : 2495
+    vmax: 120
+    year : 1985
 
 # -------------
 # TRANSMISSION
@@ -67,6 +89,7 @@ trims :
     length : 4600
     wheelbase : 2794
     weight : 1850
+    seats : 9
     model : landroverDefender110
     engine : 
       name : 2.3D 60hp
@@ -83,27 +106,6 @@ trims :
 # OPTIONS
 # -------------
 options: 
-  - name : 2.3P 74hp
-    year : 1983
-    engine :   
-      name :  2.25P
-      hp: 74
-      torqueY: [80  , 150 , 162  , 129 , 100] # 162nm@2000 74hp@4000
-      torqueX: [1000, 1500, 2000 , 4000, 4500]
-      type : petrol
-      layout : l4 
-      displacement : 2286
 
-  - name : 2.5P 83hp
-    year : 1985
-    engine :   
-      name :  2.5P
-      hp: 83
-      torqueY: [85, 160  , 180 , 145 , 110] # 180Nm@2000 83hp@4000
-      torqueX: [1000, 1500, 2000, 4000, 4500]
-      type : petrol
-      layout : l4
-      displacement : 2495
-    vmax: 120
 
 
