--- a/data/cars/citroen_ami.yaml
+++ b/data/cars/citroen_ami.yaml
@@ -9,8 +9,8 @@ year : 2020
 engine :  
   name :  
   hp: 8hp # 6kw
-  torqueY: [625,100 ,60  , 40  , 30  , 24  , 20  , 17.2, 15  , 12  , 7   ,0]
-  torqueX: [0  ,500 ,1000, 1500, 2000, 2500, 3000, 3500, 4000, 5000, 8000, 10000]
+  torqueY: [625, 312, 208, 156, 125, 89 , 62  , 41  , 31  , 25  , 21  , 18  , 16  , 13  , 7   , 0]
+  torqueX: [0  , 200, 300, 400, 500, 700, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 5000, 8000, 10000]
   type : electric
   layout : # boxer2, l4, v6
   displacement :
