--- a/data/cars/volkswagen_kombi.yaml
+++ b/data/cars/volkswagen_kombi.yaml
@@ -7,7 +7,7 @@ year : 1967
 # ENGINE
 # -------------
 engine :  
-  name : 1.6L B4
+  name : 1.6L B4 type1 h-code
   hp: 48
   torqueY: [85  , 98  , 94  , 84  , 62]
   torqueX: [1400, 2000, 3000, 4000, 4500] # https://www.volkszone.com/threads/maximum-revs-on-a-t2.281423/
@@ -19,9 +19,9 @@ engine :
 # TRANSMISSION
 # -------------
 gearName : 
-gearRatio : [4.70,2.28,1.47,0.89]
-driveRatio : 5
-gearSpeed : 28.8
+gearRatio : [4.80,2.31,1.47,0.89]
+driveRatio : 4.375
+gearSpeed : 29.3
 wheelDiameter : 68
 type : RWD 
 
