Define engines just once in a file and ref by name

--- a/data/cars/_default.yaml
+++ b/data/cars/_default.yaml
@@ -15,6 +15,10 @@ engine :
   layout : # boxer2, l4, v6
   displacement :
 
+# List additional engines
+engines :
+  - engine :
+
 # -------------
 # TRANSMISSION
 # -------------
@@ -56,6 +60,7 @@ wheelType :
 # -------------
 model: 
 modelWheel:
+modelMisc:
 
 # -------------
 # TRIMS
