--- a/data/cars/landrover_defender.yaml
+++ b/data/cars/landrover_defender.yaml
@@ -19,12 +19,13 @@ engines :
   - engine :   
       name : 2.3P 74hp
       hp: 74
-      torqueY: [80  , 150 , 162  , 129 , 100] # 162nm@2000 74hp@4000
+      torqueY: [80  , 150 , 163  , 132 , 100] # 162nm@2000 74hp@4000
       torqueX: [1000, 1500, 2000 , 4000, 4500]
       type : petrol
       layout : l4 
       displacement : 2286
     year : 1983
+    weight : 1675
 
   - engine :   
       name :  2.5P
@@ -36,6 +37,31 @@ engines :
       displacement : 2495
     vmax: 120
     year : 1985
+    weight : 1675 
+
+  - engine : 
+      name : V8 3.5L
+      hp: 114
+      torqueY: [85, 160  , 175 ,  251, 200 , 170] # 251Nm@2500 114hp@4000
+      torqueX: [1000, 1500, 2000, 2500,4000, 4500]
+      type: petrol
+      layout: v8
+      displacement : 3528
+    weight: 1671 # 1762 for the 110
+    gearName: LT95
+    gearRatio: [4.069, 2.448, 1.505, 1.000]
+    gearTransfer: [1.336, 3.32]
+    gearSpeed: 30.3
+
+  - engine : 
+      name : V8 3.5L
+    gearName : LT85
+    gearRatio : [3.650, 2.180, 1.436, 1.000, 0.7951]
+    gearTransfer : [1.192, 3.320] # 90
+    weight : 1671
+    # gearTransfer : [1.410, 3.320] # 110
+
+
 
 # -------------
 # TRANSMISSION
@@ -45,7 +71,7 @@ gearRatio : [3.585, 2.300, 1.5074, 1.000, 0.8314]
 gearReverse : 3.7
 # LT230R
 gearTransfer : [1.667, 3.320]
-driveRatio : 3.54
+driveRatio : 3.538
 gearSpeed : 29.2
 wheelDiameter : 76
 type : AWD #AWD, RWD, FWD
@@ -53,7 +79,7 @@ type : AWD #AWD, RWD, FWD
 # -------------
 # DIMENSIONS
 # -------------
-weight : 1751
+weight : 1712
 length: 3883
 width: 1790
 height: 1963
@@ -83,15 +109,21 @@ model: landroverDefender90
 modelWheel: wheelDefender
 modelMisc: Wheel1B
 
+
 # -------------
 # TRIMS
 # -------------
 trims : 
+  # -----------------------
+  #
+  #       DEFENDER 110
+  #
+  # -----------------------
   - trim : defender110
     year : 1983
     length : 4600
     wheelbase : 2794
-    weight : 1850
+    weight : 1806
     seats : 9
     model : landroverDefender110
     engine : 
@@ -103,6 +135,25 @@ trims :
     gearRatio : [3.321,1.798,1.0,0.757]
     driveRatio : 4.7
     gearSpeed: 24.2
+
+    engines : 
+      - engine : 
+          name : 2.3P 74hp
+        weight : 1787
+
+      - engine :
+          name : 2.5P
+        weight : 1787
+
+      - engine :
+          name : V8 3.5L
+        gearName : LT85
+        gearRatio : [3.650, 2.180, 1.436, 1.000, 0.7951]
+        gearTransfer : [1.410, 3.320] # 110
+        weight : 1762
+
+
+      
 
 
 
