--- a/data/cars/_default.yaml
+++ b/data/cars/_default.yaml
@@ -24,6 +24,8 @@ engines :
 # -------------
 gearName : 
 gearRatio : []
+gearReverse :
+gearTransfer : 
 driveRatio : 
 gearSpeed : 
 wheelDiameter : # 63cm
