Avoid errors on empty data

--- a/data/cars/_default.yaml
+++ b/data/cars/_default.yaml
@@ -1,13 +1,14 @@
-name : 
-brand : 
+name :
+brand :
 trim :
 year :
+price :
 
 # -------------
 # ENGINE
 # -------------
-engine :  
-  name :  
+engine :
+  name :
   hp:
   torqueY: []
   torqueX: []
@@ -22,58 +23,58 @@ engines :
 # -------------
 # TRANSMISSION
 # -------------
-gearName : 
+gearName :
 gearRatio : []
 gearReverse :
-gearTransfer : 
-driveRatio : 
-gearSpeed : 
+gearTransfer :
+driveRatio :
+gearSpeed :
 wheelDiameter : # 63cm
 type : #AWD, RWD, FWD
 
 # -------------
 # DIMENSIONS
 # -------------
-weight : 
-length: 
-width: 
+weight :
+length:
+width:
 height:
-dragCoef: 
+dragCoef:
 dragArea:
 
 wheelbase:
 bodyType: # hatchback, van=monospace=mpv, bus, sedan, box
 clearance:
-trunk: 
+trunk:
 trunkMax:
 seats:
 
 # -------------
 # STATS
 # -------------
-acc0100: 
-vmax: 
-avgConsumption : 
+acc0100:
+vmax:
+avgConsumption :
 energyTank :
-autonomy : 
-turningCircle : 
+autonomy :
+turningCircle :
 wheelType :
 
 # -------------
 # 3D
 # -------------
-model: 
+model:
 modelWheel:
 modelMisc:
 
 # -------------
 # TRIMS
 # -------------
-trims : 
+trims :
   - trim :
 
 # -------------
 # OPTIONS (available on all trims)
 # -------------
-options: 
+options:
   - name :
