--- a/data/cars/renault_zoe.yaml
+++ b/data/cars/renault_zoe.yaml
@@ -7,6 +7,7 @@ style: hatchback
 # ENGINE
 # -------------
 engine:
+  name : q90
   torqueY: [190, 220, 220, 215, 194, 172.4, 155, 129.3, 115, 90, 73 , 60 , 40 ]
   torqueX: [0  , 7  , 32 , 35 , 40 , 45   , 50 , 60   , 70 , 90, 110, 135, 200]
   torqueXMultiplier: 80
@@ -41,7 +42,7 @@ seats: 5
 # -------------
 brakePadsForce : 12000
 turningCircle : 10.56
-acc0100: 13.5 
+acc0100: 13.5
 
 
 # -------------
@@ -50,7 +51,7 @@ acc0100: 13.5
 trims:
   - trim : r75 life
     year : 2016
-    engine : 
+    engine :
       torqueY: [190, 210 , 210, 167 , 137 , 98  , 78   , 60  , 48   ]
       torqueX: [0  , 250, 2500, 3250, 4000, 5500, 7000 , 9000, 11300]
       torqueXMultiplier: 1
