--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "devDependencies": {
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/kit": "^1.15.7",
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "@tsconfig/svelte": "^4.0.1",
     "@types/jest": "^29.5.0",
@@ -18,8 +20,7 @@
     "jest": "^29.5.0",
     "svelte": "^3.58.0",
     "svelte-check": "^2.10.3",
-    "svelte-preprocess": "^4.10.7",
-    "typescript": "^5.0.0-beta",
+    "typescript": "^5.0.0",
     "vite": "^4.2.1",
     "vite-plugin-static-copy": "^0.13.1",
     "vite-plugin-watch-and-run": "^1.1.2",
