--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "build-db": "node ./src/logic/cardata/script_loaddb.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
@@ -20,8 +20,10 @@
     "@types/jest": "^29.5.0",
     "@types/three": "^0.150.1",
     "jest": "^29.5.0",
+    "sass": "^1.62.0",
     "svelte": "^3.58.0",
     "svelte-check": "^2.10.3",
+    "svelte-preprocess": "^5.0.3",
     "typescript": "^5.0.0",
     "vite": "^4.2.1",
     "vite-plugin-static-copy": "^0.13.1",
@@ -29,8 +31,10 @@
     "yaml": "^2.2.1"
   },
   "dependencies": {
+    "@picocss/pico": "^1.5.10",
     "@svgdotjs/svg.js": "^3.1.2",
     "camera-controls": "^1.38.2",
+    "nes.css": "^2.3.0",
     "pts": "^0.10.12",
     "sirv-cli": "^1.0.14",
     "svelte-watch-resize": "^1.0.3",
