--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@picocss/pico": "^1.5.10",
     "@svgdotjs/svg.js": "^3.1.2",
     "camera-controls": "^1.38.2",
+    "fuse.js": "^6.6.2",
     "nes.css": "^2.3.0",
     "pts": "^0.10.12",
     "sirv-cli": "^1.0.14",
