--- a/data/cars/toyota_hilux.yaml
+++ b/data/cars/toyota_hilux.yaml
@@ -2,11 +2,12 @@ name : Hilux VII xtra
 brand : Toyota
 trim :
 year : 2006
+price : 25700€
 
 # -------------
 # ENGINE
 # -------------
-engine :  
+engine :
   name :  2kd ftv engine 2.5 d4d
   hp: 120
   torqueY: [130 , 180 , 240 , 260 , 325 , 238 , 210 , 180 ] # 325nm@2000 120hp@3600
@@ -21,6 +22,7 @@ engine :
 gearRatio : [4.31,2.33,1.44,1.00,0.79]
 driveRatio : 3.583
 gearSpeed : 48.6
+gearTransfer : [1,2.28]
 wheelDiameter : 73 #63cm
 type : AWD #AWD, RWD, FWD
 
@@ -44,9 +46,9 @@ seats: 5
 # -------------
 acc0100: 13.5
 vmax: 165
-avgConsumption : 
+avgConsumption :
 energyTank : 80
-autonomy : 
+autonomy :
 turningCircle : 13
 wheelType :  205R16 # 205/70R16
 
@@ -59,9 +61,9 @@ modelWheel: wheelHilux
 # -------------
 # TRIMS
 # -------------
-trims : 
+trims :
   - trim : 102hp
-    engine :  
+    engine :
       name :  2kd ftv engine 2.5 d4d not intercooled
       hp: 102
       torqueY: [130 , 180 , 240 , 260 , 260 , 260  , 230  , 200 , 175 , 154 ] # 260nm@1600 102hp@3600
