Add popular semi trucks

--- a/data/cars/fiat_tipo.yaml
+++ b/data/cars/fiat_tipo.yaml
@@ -48,6 +48,8 @@ engines :
     weight : 1295
     avgConsumption : 3.7
     vmax : 200
+  - engine :
+      name : 1.3 Multijet
 
 
 # -------------
