--- a/data/cars/caterpillar_797.yaml
+++ b/data/cars/caterpillar_797.yaml
@@ -13,7 +13,7 @@ engine :
   torqueY: [16535,16300,16000, 14200, 11500]
   torqueX: [260  ,500  ,1500 , 1750 , 1900]
   type : # petrol, diesel, hybrid, electric
-  layout : 2xl12
+  layout : 2xv12
   displacement : 117100
 
 # List additional engines
@@ -27,6 +27,7 @@ gearName :
 gearRatio : [5.98, 4.45, 3.30, 2.44,1.82, 1.35, 1]
 gearReverse :
 gearTransfer :
+gearEfficiency : 0.949
 driveRatio : 21.09
 gearSpeed :
 wheelDiameter : 402
@@ -47,6 +48,7 @@ bodyType: haultruck
 clearance:
 trunk:
 trunkMax:
+maxWheight: 623700
 seats:
 
 # -------------
@@ -57,7 +59,7 @@ vmax: 68km/h
 avgConsumption : 753
 energyTank : 6813
 autonomy :
-turningCircle :
+turningCircle : 37.4
 wheelType : 59/80R63 # 80000$
 
 # -------------
