--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.15.7",
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "@tsconfig/svelte": "^4.0.1",
     "@types/jest": "^29.5.0",
     "@types/three": "^0.150.1",
+    "gh-pages": "^5.0.0",
     "jest": "^29.5.0",
     "sass": "^1.62.0",
     "svelte": "^3.58.0",
