--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "build-db": "node ./src/logic/cardata/script_loaddb.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "gh-pages": "npm run build-db && npm run build && npx gh-pages -d build"
+    "gh-pages": "npm run build-db && npm run build && touch build/.nojekyll && npx gh-pages -d build"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
