--- a/data/cars/citroen_2cv.yaml
+++ b/data/cars/citroen_2cv.yaml
@@ -1,15 +1,18 @@
 name : 2cv
 brand : citroen
 year : 1953
+price: 350000fr
+unitsProduced : 5,114,961 # peak 232.551 en 1964 remplacé progressivement par Dyane
 
 # -------------
 # ENGINE
 # -------------
 engine :
   name :
-  torqueY : [9.6 ,17.1,19.6,19.6,19.4,18.9,18  ,14.2]
+  torqueY : [9.6 ,17.1,19.6,19.6,19.4,18.9,18  ,14.2] # 9 BHP @ 3500 t/mn
   torqueX : [1000,1500,2000,2200,2500,3000,3500,4000]
   layout : boxer 2
+  displacement : 375
   hp : 9
 
 # -------------
@@ -52,15 +55,28 @@ modelWheel: wheel2cv
 # TRIMS
 # -------------
 trims :
-  - trim : 23hp
+  - trim : Azam
     year : 1965
     engine :
-      torqueY : [13.3,26.2,34.9,39.5,40.1,40.1,39  ,36.6,32.9,26.6]
+      hp : 18
+      torqueY : [13.3,26.2,34.9,39.5,40.1,40.1,39  ,36.6,32.9,26.6] # 18 BHP @ 5 000 t/mn
       torqueX : [1000,1500,2000,2500,2700,3000,3500,4000,4500,5000]
-      hp : 23
     gearRatio : [7.411,3.573,2.133,1.474]
     driveRatio : 3.625
     gearSpeed : 21.3
     weight : 715 # 610 + 75 + 30
+
+  - trim : 2cv 4
+    year : 1970
+    engine :
+      hp : 23
+      torqueY : [13.3,26.2,34.9,39.5,40.1,40.1,39  ,36.6,32.9,26.6] # 26 BHP @ 6 750 t/mn
+      torqueX : [1000,1500,2000,2500,2700,3000,3500,4000,4500,5000]
+    gearRatio : [7.411,3.573,2.133,1.474]
+    driveRatio : 3.625
+    gearSpeed : 21.3
+    weight : 715 # 610 + 75 + 30
+    vmax : 102
+    avgConsumption : 5.3
 
 
