Add boeing model
only 30 units sold of that first 737 model tho :o

--- a/data/cars/_default.yaml
+++ b/data/cars/_default.yaml
@@ -61,11 +61,19 @@ turningCircle :
 wheelType :
 
 # -------------
+# PLANE STATS
+# -------------
+groundRoll:
+takeOffSpeed:
+wingArea:
+
+# -------------
 # 3D
 # -------------
 model:
 modelWheel:
 modelMisc:
+wheelScale:
 
 # -------------
 # TRIMS
