--- a/data/cars/citroen_2cv.yaml
+++ b/data/cars/citroen_2cv.yaml
@@ -61,6 +61,7 @@ trims :
       hp : 18
       torqueY : [13.3,26.2,34.9,39.5,40.1,40.1,39  ,36.6,32.9,26.6] # 18 BHP @ 5 000 t/mn
       torqueX : [1000,1500,2000,2500,2700,3000,3500,4000,4500,5000]
+      displacement : 425
     gearRatio : [7.411,3.573,2.133,1.474]
     driveRatio : 3.625
     gearSpeed : 21.3
@@ -72,6 +73,7 @@ trims :
       hp : 23
       torqueY : [13.3,26.2,34.9,39.5,40.1,40.1,39  ,36.6,32.9,26.6] # 26 BHP @ 6 750 t/mn
       torqueX : [1000,1500,2000,2500,2700,3000,3500,4000,4500,5000]
+      displacement : 602
     gearRatio : [7.411,3.573,2.133,1.474]
     driveRatio : 3.625
     gearSpeed : 21.3
